Import and use of List instead of Array