@@ -5,7 +5,7 @@ import static seedu.address.logic.Messages.MESSAGE_PERSONS_LISTED_OVERVIEW;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
 import static seedu.address.logic.commands.CommandTestUtil.assertVerboseCommandSuccess;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -70,48 +70,48 @@ public class FindCommandByFieldsTest {
     public void execute_emailDomain_matchesOne() {
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 1);
         PersonContainsKeywords predicate = new PersonContainsKeywords(
-                java.util.List.of(), java.util.List.of("gmail.com"), java.util.List.of(), java.util.List.of());
+                List.of(), List.of("gmail.com"), List.of(), List.of());
         expectedModel.updateFilteredPersonList(predicate);
 
         FindCommand command = new FindCommand(predicate, false);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(java.util.List.of(bob), model.getFilteredPersonList());
+        assertEquals(List.of(bob), model.getFilteredPersonList());
 
         FindCommand command1 = new FindCommand(predicate, true);
         assertVerboseCommandSuccess(command1, model, expectedMessage, expectedModel);
-        assertEquals(java.util.List.of(bob), model.getFilteredPersonList());
+        assertEquals(List.of(bob), model.getFilteredPersonList());
     }
 
     @Test
     public void execute_teleHandleExact_matchesOne() {
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 1);
         PersonContainsKeywords predicate = new PersonContainsKeywords(
-                java.util.List.of(), java.util.List.of(), java.util.List.of("@carol"), java.util.List.of());
+                List.of(), List.of(), List.of("@carol"), List.of());
         expectedModel.updateFilteredPersonList(predicate);
 
         FindCommand command = new FindCommand(predicate, false);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(java.util.List.of(carol), model.getFilteredPersonList());
+        assertEquals(List.of(carol), model.getFilteredPersonList());
 
         FindCommand command1 = new FindCommand(predicate, true);
         assertVerboseCommandSuccess(command1, model, expectedMessage, expectedModel);
-        assertEquals(java.util.List.of(carol), model.getFilteredPersonList());
+        assertEquals(List.of(carol), model.getFilteredPersonList());
     }
 
     @Test
     public void execute_tutorialGroup_matchesTwo() {
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 2);
         PersonContainsKeywords predicate = new PersonContainsKeywords(
-                java.util.List.of(), java.util.List.of(), java.util.List.of(), java.util.List.of("TG1"));
+                List.of(), List.of(), List.of(), List.of("TG1"));
         expectedModel.updateFilteredPersonList(predicate);
 
         FindCommand command = new FindCommand(predicate, false);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(alice, bob), model.getFilteredPersonList());
+        assertEquals(List.of(alice, bob), model.getFilteredPersonList());
 
         FindCommand command1 = new FindCommand(predicate, true);
         assertVerboseCommandSuccess(command1, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(alice, bob), model.getFilteredPersonList());
+        assertEquals(List.of(alice, bob), model.getFilteredPersonList());
     }
 
     @Test
@@ -119,19 +119,19 @@ public class FindCommandByFieldsTest {
         // email domain school.edu OR tutorial group Tutorial 1 -> should match {alice, bob, carol}
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3);
         PersonContainsKeywords predicate = new PersonContainsKeywords(
-                java.util.List.of(),
-                java.util.List.of("school.edu"),
-                java.util.List.of(),
-                java.util.List.of("TG1"));
+                List.of(),
+                List.of("school.edu"),
+                List.of(),
+                List.of("TG1"));
         expectedModel.updateFilteredPersonList(predicate);
 
         FindCommand command = new FindCommand(predicate, false);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(alice, bob, carol), model.getFilteredPersonList());
+        assertEquals(List.of(alice, bob, carol), model.getFilteredPersonList());
 
         FindCommand command1 = new FindCommand(predicate, true);
         assertVerboseCommandSuccess(command1, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(alice, bob, carol), model.getFilteredPersonList());
+        assertEquals(List.of(alice, bob, carol), model.getFilteredPersonList());
     }
 
 }
